<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity2">

    <data>
        <variable
            name="activity"
            type="com.lsm.supermemories.MainActivity2"/>
        <variable
            name="imageUtils"
            type="com.lsm.supermemories.utils.ImageUtils"/>
        <variable
            name="HomePageFragment"
            type="com.lsm.supermemories.ui.memories.list.HomePage" />
        <variable
            name="viewModel"
            type = "com.lsm.supermemories.viewmodels.SentenceViewModel"/>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundColor">


        <Button
            android:id="@+id/button2"
            android:layout_width="250sp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="488dp"
            android:background="@drawable/custom_button"
            android:onClick="@{() -> HomePageFragment.navigate_to_add_fragment()}"
            android:text="@string/dodaj_nowe_wspomnienie"

            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.521"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintVertical_bias="0.598" />

        <Button
            android:id="@+id/button3"
            android:layout_width="250sp"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_button"
            android:onClick="@{() -> HomePageFragment.navigate_to_date_fragment()}"
            android:text="@string/zobacz_wspomnienia"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toTopOf="@+id/button2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.519"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.802" />

        <Button
            android:id="@+id/button5"
            android:layout_width="250sp"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_button"
            android:onClick="@{() -> viewModel.getSentence()}"
            android:text="@string/zobacz_cytat_na_dzi"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.519"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button2"
            app:layout_constraintVertical_bias="0.045" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{viewModel.contents}"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Display3"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="italic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.553"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button5"
            app:layout_constraintVertical_bias="0.119" />


        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{viewModel.source}"
            android:textAlignment="textEnd"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.573"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView1"
            app:layout_constraintVertical_bias="0.172" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="624dp"
            android:layout_height="304dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.352"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button5"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@drawable/_00f2acc_500" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="508dp"
            android:layout_height="582dp"
            android:layout_marginBottom="108dp"
            app:layout_constraintBottom_toBottomOf="@+id/textView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/pngtreegolden_light_effect_glitter_stars_5339404" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="cursive"
            android:text="@string/supermemories"
            android:textSize="40sp"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.023" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>